# arctic_doc_model_rebuild

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: gold_data_contract.yaml  local_paths.example.yaml
configs/model_specs/: hydroclimate_extension_f6_ridge_alpha_1.yaml  log_target_sensitivity_f6_ridge_alpha_1.yaml  primary_baseline_f3_q_season_river_fixed_ridge_alpha_1.yaml  production_candidate_r4_river_specific_q_and_season_linear.yaml  refined_primary_model.yaml
outputs/models/: production_candidate_r4_daily_doc_model.joblib  production_candidate_r4_daily_doc_model_metadata.json
outputs/reports/: data_contract_report.md  gold_data_summary_report.md
outputs/tables/: gold_input_inventory.csv  gold_matrix_by_river.csv  gold_matrix_by_year.csv  gold_matrix_missingness.csv  gold_table_verification.csv  model_input_schema_check.csv
scripts/: verify_gold_data.py
src/arctic_doc_model_rebuild/: __init__.py  cli.py  data_loader.py  eda.py  final_synthesis.py  gold_contract.py  manuscript.py  paths.py  (+4 more)
tests/: test_annual_flux_trends.py  test_baseline_final.py  test_baseline_models.py  test_baseline_refinement.py  test_bias_refinement.py  test_concentration_uncertainty.py  test_daily_doc_prediction.py  test_data_loader.py  test_doc_flux.py  test_eda.py  test_final_synthesis.py  test_flux_attribution.py  test_flux_cohorts.py  test_freshet_control.py  test_gold_contract.py  test_manuscript.py  test_may_july_flux_interpretation.py  test_no_data_leakage.py  test_no_model_outputs.py  test_optical_sensitivity.py  test_roi_qc.py  test_snowmelt_windows.py
(+226 files in other folders)
